@@ -8,7 +8,8 @@
 - libgutenberg 0.10.5
     - don't strip periods from title_no_subtitle
     - The `heading` column in the database's author-book many to many table was being ignored by much of our code. The result was that multiple authors were being listed in alphabetical order. now, the heading column is used and the first sort column for the authors of a book, and the authors other than the first author are have heading=2 (instead of the default `heading=1`) set on initial metadata load. The cataloguer can reset the heading numbers, but does not wish the order of authors other than the "main" author to be tracked in the database.
-    - fixed a reversion in 0.10.10 that made author name matching case sensitive.
+    - fixed a reversion in 0.10.10 that made author name matching case sensitive.   
+- get ebook number from filename if parse fails #225 
 
 
 0.12.42 April 01, 2024
